--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -36,28 +36,35 @@ It is Bayesian in the sense that I use probability models to arrive at conclusio
 It is applied and methodological in the sense that I am concerned with real world questions and the means to answer them.
 
 The real world questions relate to surveillance of the HIV epidemic in sub-Saharan Africa.
-Though progress has been made, millions of people are impacted by HIV each year.
+Millions of people are impacted by HIV each year.
 Quantifying the epidemic using statistics is an important part of the public health response, and the path towards disease control and elimination. 
 
-The data in this thesis relate to people answering survey questions or using healthcare facilities.
-As such, it has particular positions in space and time which should be taken into account.
-Spatio-temporal data, while encompassing a great diversity, has distinctive commonalities which make its collective study worthwhile.
+The data in this thesis relate to people's answers to survey questions or use of healthcare facilities.
+It has particular positions in space and time which should be taken into account.
+Spatio-temporal data, while diverse, has distinctive commonalities which make its collective study worthwhile.
 
 Computation is an essential part of modern statistical practice.
 Each project chapter is accompanied by code, hosted on GitHub.
 
 ## Chapter overview
 
-* Chapter \@ref(background): I start by providing useful setting and motivation of the rest of this thesis.
-* Chapter \@ref(bayes-st): Introduces the statistical concepts and notation used throughout the thesis.
-* Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was designed with analysis of a grid of pixels in mind. In disease mapping, we work using the districts of a country, which are not a grid. I evaluate the practical consequences of this this concern [@howes2023beyond].
-* Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of HIV infection. The Global AIDS Strategy suggests prioritising interventions on the basis of behaviour to prevent the most new infections using available resources. I estimate the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assess the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
-* Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators. With this motivation, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast]. I apply the method to data from Malawi, and analyse the consequence of inference method choice for policy relevant outcomes. Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
+* Chapter \@ref(hiv-aids): I begin by providing background on the HIV/AIDS epidemic.
+* Chapter \@ref(bayes-st): I then introduce the statistical concepts and notation used throughout the thesis.
+* Chapter \@ref(beyond-borders): The prevailing model for spatial structure used in small-area estimation [@besag1991bayesian] was designed with analysis of a grid of pixels in mind.
+In disease mapping, we work using the districts of a country, which are not a grid.
+I evaluate the practical consequences of this this concern [@howes2023beyond].
+* Chapter \@ref(multi-agyw): Adolescent girls and young women are a demographic group at disproportionate risk of HIV infection.
+The Global AIDS Strategy suggests prioritising interventions on the basis of behaviour to prevent the most new infections using available resources.
+I estimate the size of behavioural risk groups across priority countries to enable implementation of this strategy, and assess the potential benefits in terms of numbers of new infections prevented [@howes2023spatio].
+* Chapter \@ref(naomi-aghq): The Naomi small-area estimation model [@eaton2021naomi] is used by countries to estimate district-level HIV indicators.
+Motivated by this model, I develop an approximate Bayesian inference method combining adaptive Gauss-Hermite quadrature with principal components analysis [@howes2023fast].
+I apply the method to data from Malawi, and analyse the consequences of inference method choice for policy relevant outcomes.
+Further, I open the door to a new class of fast, flexible, and accurate Bayesian inference algorithms.
 * Chapter \@ref(conclusions): I discuss avenues for future work, and my conclusions regarding the research.
 
 Figure \@ref(fig:chapter-flowchart) gives the dependency structure for the above chapters.
-The original work (Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq)) may be read in any order.
+Though the presented order is recommended, Chapter \@ref(beyond-borders), Chapter \@ref(multi-agyw) and Chapter \@ref(naomi-aghq)) may be read in any order.
 
-```{r chapter-flowchart, fig.cap="Flowchart presenting the recommended chapter dependencies for the thesis. The dashed line represents a recommended, but not required dependency. Each of the chapters in the block can be read in any order, though the order presented is recommended."}
+```{r chapter-flowchart, fig.cap="Flowchart presenting the recommended chapter dependencies for this thesis. The dashed line represents a recommended, but not required dependency."}
 knitr::include_graphics("figures/chapter-flowchart.pdf")
 ```
