--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -66,30 +66,31 @@ condom_averted_lb <- 10000000
 
 <!-- What is HIV -->
 Human immunodeficiency virus (HIV) is a retrovirus which infects humans.
-HIV primarily infects a type of white blood cell vital for the function of the immune system.
-If left untreated, HIV can progress to a more advanced stage known as acquired immunodeficiency syndrome (AIDS).
+HIV primarily attacks a type of white blood cell vital for the function of the immune system.
+A more advanced stage known as acquired immunodeficiency syndrome (AIDS) can develop if HIV is left untreated. 
 AIDS is characterised by increased risk of developing infections normally controlled by the immune system.
 
 <!-- How is HIV transmitted -->
-HIV is transmitted by exposure to bodily fluids of an infected person.
+HIV is transmitted by exposure to the bodily fluids of an infected person.
 The most common mode of transmission is through unprotected anal or vaginal sex.
-Trasmission also occurs from a mother to her baby, or by sharing drug injection equipment.
+Transmission can also occur from a mother to her baby, or when drug injection equipment is shared.
 
 <!-- The extent of HIV as a problem -->
-The first HIV cases were reported in the early 1980s.
-Since then, around `r custom_numbers_to_words(deaths)` people have died from causes related to HIV.
-In 2021 there were `r custom_numbers_to_words(plhiv2021)` people living with HIV, `r custom_numbers_to_words(deaths2021)` HIV related deaths, and `r custom_numbers_to_words(infections2021)` people newly infected with HIV [@unaids2021global].
+The first AIDS cases were reported in Los Angeles in the early 1980s.
+Since then, HIV has spread globally, and has already caused around `r custom_numbers_to_words(deaths)` deaths.
+In 2021 there were `r custom_numbers_to_words(plhiv2021)` people living with HIV, as well as `r custom_numbers_to_words(deaths2021)` HIV related deaths, and `r custom_numbers_to_words(infections2021)` people newly infected with HIV [@unaids2021global].
 
 <!-- What is being done -->
-A major global effort has been made to address the epidemic.
-The result has been significant progress, both in reducing the number of new HIV cases and decreasing the number of HIV related deaths (Figure \ref{fig:overall-picture}).
-The following interventions:
+A major international effort has been made to address the epidemic.
+The result has been significant progress, both in reducing the number of new HIV cases and decreasing the number of HIV related deaths (Figure \ref{fig:overall-picture}) from the peak of the epidemic.
+This has been possible because of the following interventions:
 
 * Antiretroviral therapy (ART) is a drug which stops the virus from replicating in the body.
 By taking ART daily, a person living with HIV can live a full and healthy life.
 ART has been estimated to have averted this many million deaths.
 Furthermore, if the virus is undetectable then it cannot be transmitted sexually.
 For this reason, treatment also operates as prevention (TaSP).
+ART has been estimated to have averted this many new infections.
 * Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs).
 Scale-up of condom usage since 1990 has been estimated to have averted over `r custom_numbers_to_words(condom_averted_lb)` new HIV infections [@stover2021impact].
 * Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP).
@@ -102,22 +103,23 @@ knitr::include_graphics("figures/overall-picture.png")
 <!-- Uneven burden in space -->
 There is substantial geographic inequality in disease burden.
 In some countries, the epidemic is concentrated within small populations, and prevalence is low.
-For others, transmission is sustained in the general population, and prevalence is higher.
-Most of the countries severely affected are in sub-Saharan Africa (SSA), accounting for percentage of people living with HIV (PLHIV) worldwide.
+In others, transmission is sustained in the general population, and prevalence is higher.
+Most of the countries severely affected by HIV are in sub-Saharan Africa (SSA), which accounts for this percentage of people living with HIV (PLHIV) worldwide.
 There is also significant geographic variation within countries.
 
 <!-- Uneven burden across people -->
-In all settings, there is substantial inequality in disease burden across groups.
+Across all settings, there is substantial inequality in disease burden between groups.
 Groups at increased risk of HIV infection are known as key populations (KPs), and include men who have sex with men (MSM), female sex workers (FSW), people who inject drugs (PWID), and transgender people (TGP).
 KPs are often marginalised, and face legal and social issues.
 
 <!-- How difuse is burden -->
-In SSA, risk is more diffuse across the population than in concentrated settings.
+In SSA, risk is more diffuse than in concentrated settings.
 Demographic groups, while not classified as KPs, at increased risk of HIV infection include adolescent girls and young women (AGYW), migratory populations, and rural communities.
 
 <!-- Prioritisation of interventions  -->
 HIV interventions should be prioritised to have the greatest impact on the epidemic.
 The precision public health paradigm aims to get the right interventions, to the right populations, in the right place, at the right time.
+This requires data.
 <!-- Methods for prevention prioritisation include geographic, demographic, key population services, risk screening, and individual-level risk characteristics. -->
 
 ## HIV surveillance
