--- a/front-and-back-matter/_acknowledgements.Rmd
+++ b/front-and-back-matter/_acknowledgements.Rmd
@@ -1,9 +1,9 @@
-Thanks to Jeff Eaton and Seth Flaxman for supervision of this research;
+Thanks to Seth Flaxman and Jeff Eaton for supervision of this research;
 staff and students of the StatML CDT at Imperial and Oxford;
 members of the HIV Inference Group at Imperial;
 members of the Machine Learning and Global Health Network;
 the Bill & Melinda Gates Foundation and EPSRC for funding this PhD;
-Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to MIT;
+Mike McLaren, Kevin Esvelt, the Nucleic Acid Observatory team, and the Sculpting Evolution lab for hosting my visit to the MIT Media Lab;
 Alex Stringer for hosting my visit to Waterloo;
 the Effective Altruism community;
 my friends and family.
@@ -11,5 +11,5 @@ my friends and family.
 \begin{flushright}
 Adam Howes \\
 Imperial College London\\
-2023
+September 2023
 \end{flushright}
