--- a/references.bib
+++ b/references.bib
@@ -584,7 +584,7 @@ URL= {https://www.r-inla.org/faq},
 @Manual{multiutils,
   title = {multi.utils: Utility functions for multi-agyw},
   author = {Adam Howes},
-  year = {2022},
+  year = {2023},
   note = {R package version 0.1.0},
 }
 
@@ -717,3 +717,42 @@ URL= {https://www.r-inla.org/faq},
   publisher={MDPI}
 }
 
+@article{brugh2021characterizing,
+  title={Characterizing and mapping the spatial variability of HIV risk among adolescent girls and young women: A cross-county analysis of population-based surveys in Eswatini, Haiti, and Mozambique},
+  author={Brugh, Kristen N and Lewis, Quinn and Haddad, Cameron and Kumaresan, Jon and Essam, Timothy and Li, Michelle S},
+  journal={PLoS One},
+  volume={16},
+  number={12},
+  pages={e0261520},
+  year={2021},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{baral2012burden,
+  title={{Burden of HIV among female sex workers in low-income and middle-income countries: a systematic review and meta-analysis}},
+  author={Baral, Stefan and Beyrer, Chris and Muessig, Kathryn and Poteat, Tonia and Wirtz, Andrea L and Decker, Michele R and Sherman, Susan G and Kerrigan, Deanna},
+  journal={{The Lancet Infectious Diseases}},
+  volume={12},
+  number={7},
+  pages={538--549},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@misc{unicef,
+ title={{Adolescent \& social norms situation in Mozambique}},
+ author={{UNICEF}},
+ url={https://www.unicef.org/mozambique/en/adolescent-social-norms},
+ note = {Accessed 25/03/2022}
+}
+
+@article{jia2022risk,
+  title={{Risk scores for predicting HIV incidence among adult heterosexual populations in sub-Saharan Africa: a systematic review and meta-analysis}},
+  author={Jia, Katherine M and Eilerts, Hallie and Edun, Olanrewaju and Lam, Kevin and Howes, Adam and Thomas, Matthew L and Eaton, Jeffrey W},
+  journal={Journal of the International AIDS Society},
+  volume={25},
+  number={1},
+  pages={e25861},
+  year={2022},
+  publisher={Wiley Online Library}
+}
