--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -34,33 +34,35 @@ knitr::opts_chunk$set(
 ## Bayesian statistics
 
 Bayesian statistics is a mathematical paradigm for learning from data.
-I provide a brief, opinionated, overview in this section, and recommend @mcelreath2020statistical or @gelman2013bayesian for a more complete introduction.
+I provide a brief, opinionated, overview in this section.
+For a more complete introduction, I recommend @mcelreath2020statistical or @gelman2013bayesian.
 
 ### Bayesian modelling
 
-At its best, the Bayesian paradigm allows the analyst focus their attention on the question of how to model the data.
+At its best, the Bayesian paradigm allows the analyst focus on how best to model the data.
 This is achieved by the construction of a generative model $p(\y, \bvartheta)$ for the observed data $\y$ together with parameters $\bvartheta$.
-The model is generative in the sense that one can simulate from it to obtain draws $(\y, \bvartheta) \sim p(\y, \bvartheta)$ in what is known as a prior predictive check.
+The model is generative in the sense that one can simulate from it to obtain draws $(\y, \bvartheta) \sim p(\y, \bvartheta)$.
 If these draws differ too greatly from what the analyst would expect, then the generative model can be refined.
+In this way, models can be built iteratively, and complexity added gradually. 
 
 The model is usually constructed from two parts, known as the likelihood $p(\y \, | \, \bvartheta)$ and the prior $p(\bvartheta)$ whereby $p(\y, \bvartheta) = p(\y \, | \, \bvartheta) p(\bvartheta)$.
 The likelihood, as a function of $\bvartheta$ with $\y$ fixed, reflects the probability of observing the data when the true value of the parameters is $\bvartheta$.
 The prior encapsulates beliefs about the parameters $\bvartheta$ before the data is observed.
 There are substantial disagreements about how the prior should be specified.
 That said, the distinction between likelihood and prior can sometimes be blurred (Section \@ref(hierarchical-lgm-elgm)).
-As such, these difficulties are not unique to the prior [@gelman2017prior].
+As such, it may be argued that these difficulties are not unique to the prior [@gelman2017prior].
 
 ### Bayesian computation
 
 The posterior distribution $p(\bvartheta \, | \, \y)$ represents beliefs about the parameters given the observed data.
-Using Bayes' theorem, it is given by
+Using teh eponymous Bayes' theorem, it is given by
 \begin{equation}
 p(\bvartheta \, | \, \y) = \frac{p(\y \, | \, \bvartheta) p(\bvartheta)}{p(\y)}. \label{eq:posterior}
 \end{equation}
-Unfortunately, it is usually intractable to calculate directly because of the integral $p(\y) = \int p(\y, \bvartheta) \text{d}\bvartheta$ in the denominator.
-As such, we are typically in the situation where, athough the numerator is proportional to the posterior $p(\bvartheta \, | \, \y) \propto p(\y \, | \, \bvartheta) p(\bvartheta)$ and easy to evaluate, it is not easy to evaluate the posterior itself.
+Unfortunately, the above equation is usually intractable to calculate directly because of the integral $p(\y) = \int p(\y, \bvartheta) \text{d}\bvartheta$ in the denominator.
+As such, the typically situation is that although the numerator is proportional to the posterior $p(\bvartheta \, | \, \y) \propto p(\y \, | \, \bvartheta) p(\bvartheta)$ and easy to evaluate, it is not easy to evaluate the posterior itself.
 
-A great variety of computational methods have been developed at to tackle this problem.
+A great variety of computational methods have been developed which aim to tackle this problem.
 Markov chain Monte Carlo (MCMC) is the most popular approach, and proceeds by simulating samples from a Markov chain with the posterior as its stationary distribution.
 Variational Bayes approaches assume the posterior distribution belongs to a certain class of functions and use optimisation to choose the best member of that class.
 
