--- a/front-and-back-matter/_abstract.Rmd
+++ b/front-and-back-matter/_abstract.Rmd
@@ -5,4 +5,4 @@ I develop and apply Bayesian spatio-temporal methods to meet this challenge.
 Firstly, I examine models for area-level spatial structure.
 Secondly, I estimate district-level HIV risk group proportions, enabling behavioural prioritisation of prevention services, as put forward by the Global AIDS Strategy.
 Finally, I develop a novel Bayesian inference method, combining adaptive Gauss-Hermite quadrature with principal component analysis, motivated by the Naomi district-level model of HIV indicators.
-In sum, the contributions in this thesis help to guide precision HIV policy in sub-Saharan Africa, as well as advancing Bayesian methods for spatio-temporal data.
+Together, the contributions in this thesis help to guide precision HIV policy in sub-Saharan Africa, as well as advancing Bayesian methods for spatio-temporal data.
