--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@
 ## thesis metadata ##
 #####################
 title: |
-  Methods and applications of Bayesian spatio-temporal statistics for small-area estimation of HIV indicators
+  Bayesian spatio-temporal methods for small-area estimation of HIV indicators
 author: Adam Howes
 college: Department of Mathematics
 university: |
